Implementation/infra/k8s/expense-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-service
spec:
  replicas: 1 # Adjust as needed
  selector:
    matchLabels:
      app: expense-service
  template:
    metadata:
      labels:
        app: expense-service
    spec:
      containers:
      - name: expense-service
        #image: viktoria2003/services-expense-service:latest # <-- Updated image path
        image: viktoria2003/services-expense-service:20250611143000
        imagePullPolicy: Always # Or Always, if you want to ensure the latest is pulled
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 8080 # Assuming your service runs on port 8080
---
apiVersion: v1
kind: Service
metadata:
  name: expense-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: expense-service
  type: ClusterIP # Will be exposed via Ingress
