Implementation/infra/k8s/mysql-expense.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-expense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-expense
  template:
    metadata:
      labels:
        app: mysql-expense
    spec:
      containers:
      - name: mysql-expense
        image: mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-expense-storage
          mountPath: /var/lib/mysql
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
      volumes:
      - name: mysql-expense-storage
        persistentVolumeClaim:
          claimName: mysql-expense-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-expense-service
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-expense
  type: ClusterIP # Expose internally
