Implementation/infra/k8s/spendsense-saga-user-delete-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spendsense-saga-user-delete-service
spec:
  selector:
    app: spendsense-saga-user-delete
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
