Implementation/infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budgets-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/budgets/$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - http:
      paths:
      - path: /budgets(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: budget-service
            port:
              number: 80
      - path: /budgets/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: budget-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expenses-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/expenses$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - http:
      paths:
      - path: /expenses(/.*)?
        pathType: ImplementationSpecific
        backend:
          service:
            name: expense-service
            port:
              number: 80
