Implementation/infra/k8s/spendsense-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spendsense-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spendsense-fe
  template:
    metadata:
      labels:
        app: spendsense-fe
    spec:
      containers:
        - name: spendsense-fe
          image: viktoria2003/spendsense-fe:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: spendsense-fe
spec:
  type: ClusterIP
  selector:
    app: spendsense-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spendsense-fe-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app.spendsense.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spendsense-fe
                port:
                  number: 80
